festival CRUD done

--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -9,6 +9,7 @@
         </mat-menu>
         <mat-menu #admin="matMenu">
           <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/user">Utilisateurs</button>
+          <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/festival">Festivals</button>
         </mat-menu>
       </div>
       <h1 fxHide.xs>{{ title }}</h1>
