--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <mat-form-field appearance="outline" class="searchBar">
-        <mat-label>Rechercher un utilisateur, un monument...</mat-label>
+        <mat-label>Rechercher un utilisateur, un festival...</mat-label>
         <input matInput>
     </mat-form-field>
 </div>
@@ -8,6 +8,7 @@
 <section>
     <div fxLayout="row" fxLayoutAlign="center" class="example-button-row">
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['user']">UTILISATEURS</button>
+        <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['festival']">FESTIVALS</button>
     </div>
 </section>
 
