image deleted + home WIP

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -5,15 +5,20 @@
         <mat-progress-spinner mode="indeterminate" color="warn" *ngIf="isLoading"></mat-progress-spinner>
     </div>
 
-    <div *ngIf="!isLoading">
-        <mat-grid-list cols="5" rowHeight="fit" colHeight="fit" style="height: 400px" gutterSize="10px" >
+    <div *ngIf="!isLoading" class="festival-list">
+        <mat-grid-list cols="3" rowHeight="fit" colHeight="fit" style="height: 400px" gutterSize="10px" >
             <mat-grid-tile rowspan="1" colspan="1" *ngFor="let festival of festivals">
-                <mat-card class="festival-card" ng-style="{'background: linear-gradient(145deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 69%, rgba(207,206,99,1) 100%);' }">
-                    <div>{{ festival.name }}</div>
-                    <div>{{ festival.type }}</div>
-                    <div>{{ festival.description }}</div>
-                    <div>
-                        <span>{{ festival.date_start|date: 'dd/MM/YYYY HH:mm' }}</span> au <span>{{ festival.date_end|date: 'dd/MM/YYYY HH:mm' }}</span>
+                <mat-card class="festival-card" [ngStyle]="myStyle(festival.color)">
+                    <div class="inner-festival-card">
+                        <div class="festival_name" [ngStyle]="myStyleColor(festival.color)">{{ festival.name|titlecase }}</div>
+                        <div class="festival_type">Genre : {{ festival.type|titlecase }}</div>
+                        <div class="festival_description">{{ festival.description }}</div>
+                        <div class="festival_date">
+                            <div>les dates</div>
+                            <span [ngStyle]="myStyleColor(festival.color)">Du {{ festival.dateStart|date: 'dd/MM/YYYY' }} à {{ festival.dateStart|date: 'HH:mm' }}</span> 
+                            au 
+                            <span [ngStyle]="myStyleColor(festival.color)">{{ festival.dateEnd|date: 'dd/MM/YYYY' }} à {{ festival.dateEnd|date: 'HH:mm' }}</span>
+                        </div>
                     </div>
                 </mat-card>
             </mat-grid-tile>
