--- a/src/app/festival/festival.component.html
+++ b/src/app/festival/festival.component.html
@@ -35,25 +35,18 @@
                             <div *ngIf="festival.type" title="{{festival.type}}"> {{festival.type}} </div>
                         </td>
                     </ng-container>
-                    <!-- Image Column -->
-                    <ng-container matColumnDef="image">
-                        <th mat-header-cell *matHeaderCellDef> IMAGE </th>
-                        <td mat-cell *matCellDef="let festival">
-                            <div *ngIf="festival.image" title="{{festival.image}}"> {{festival.image}} </div>
-                        </td>
-                    </ng-container>
                     <!-- Date start Column -->
-                    <ng-container matColumnDef="date_start">
+                    <ng-container matColumnDef="dateStart">
                         <th mat-header-cell *matHeaderCellDef> DEBUT </th>
                         <td mat-cell *matCellDef="let festival">
-                            <div *ngIf="festival.date_start" title="{{festival.date_start}}"> {{festival.date_start|date: 'dd/MM/YYYY HH:mm'}} </div>
+                            <div *ngIf="festival.dateStart" title="{{festival.dateStart}}"> {{festival.dateStart|date: 'dd/MM/YYYY HH:mm'}} </div>
                         </td>
                     </ng-container>
                     <!-- Date end Column -->
-                    <ng-container matColumnDef="date_end">
+                    <ng-container matColumnDef="dateEnd">
                         <th mat-header-cell *matHeaderCellDef> FIN </th>
                         <td mat-cell *matCellDef="let festival">
-                            <div *ngIf="festival.date_end" title="{{festival.date_end}}"> {{festival.date_end|date: 'dd/MM/YYYY HH:mm'}} </div>
+                            <div *ngIf="festival.dateEnd" title="{{festival.dateEnd}}"> {{festival.dateEnd|date: 'dd/MM/YYYY HH:mm'}} </div>
                         </td>
                     </ng-container>
                     <!-- Cancelled Column -->
@@ -73,11 +66,18 @@
                             <div *ngIf="festival.color" title="{{festival.color}}"  id="cercle" [style.background]="festival.color"></div>
                         </td>
                     </ng-container>
+                    <!-- User Column -->
+                    <ng-container matColumnDef="user">
+                        <th mat-header-cell *matHeaderCellDef> UTILISATEUR </th>
+                        <td mat-cell *matCellDef="let festival">
+                            <div *ngIf="festival.user" title="{{festival.user.username}}"  id="cercle" [style.background]="festival.user">{{festival.user.username}}</div>
+                        </td>
+                    </ng-container>
                     <!-- Options Column -->
                     <ng-container matColumnDef="options">
                         <th mat-header-cell *matHeaderCellDef class="text-end">
                             <td mat-cell *matCellDef="let festivals" class="text-end">
-                            <a (click)="updateDialog(festivals.id, festivals.name, festivals.description, festivals.type, festivals.image, festivals.date_start, festivals.date_end, festivals.cancelled, festivals.color)">
+                            <a (click)="updateDialog(festivals.id, festivals.name, festivals.description, festivals.type, festivals.image, festivals.dateStart, festivals.dateEnd, festivals.cancelled, festivals.color)">
                                 <mat-icon> border_color </mat-icon>
                             </a>
                             <a (click)="deleteDialog(festivals.id, festivals.name)">
