home WIP + tag added

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,6 +9,7 @@
     <div fxLayout="row" fxLayoutAlign="center" class="example-button-row">
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['user']">UTILISATEURS</button>
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['festival']">FESTIVALS</button>
+        <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['tag']">TAGS</button>
     </div>
 </section>
 
