--- a/src/app/festival/festival.component.html
+++ b/src/app/festival/festival.component.html
@@ -70,7 +70,18 @@
                     <ng-container matColumnDef="user">
                         <th mat-header-cell *matHeaderCellDef> UTILISATEUR </th>
                         <td mat-cell *matCellDef="let festival">
-                            <div *ngIf="festival.user" title="{{festival.user.username}}"  id="cercle" [style.background]="festival.user">{{festival.user.username}}</div>
+                            <div *ngIf="festival.user" title="{{festival.user.username}}" >{{festival.user.username}}</div>
+                        </td>
+                    </ng-container>
+                    <!-- Tag Column -->
+                    <ng-container matColumnDef="tag">
+                        <th mat-header-cell *matHeaderCellDef> TAGS </th>
+                        <td mat-cell *matCellDef="let festival">
+                            <div *ngIf="festival.tag">
+                                <div *ngFor="let item of festival.tag" title="{{item.name}}">
+                                    {{ item.name }}
+                                </div>
+                            </div>
                         </td>
                     </ng-container>
                     <!-- Options Column -->
