--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -157,6 +157,24 @@ $dark-theme: mat.define-dark-theme(( color: ( primary: $dark-palette, accent: $l
   .festival_date {
     margin: 8px 0;
   }
+  .festival-card-annule {
+    color: rgb(214, 87, 87);
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  .festival_name_annule {
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .inner-festival-card-annule {
+    background-color: mat-color($dark-palette, 500);
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+  }
   .inner-festival-card {
     background-color: mat-color($dark-palette, 800);
     color: #fff;
@@ -308,6 +326,24 @@ $dark-theme: mat.define-dark-theme(( color: ( primary: $dark-palette, accent: $l
   }
   .inner-festival-card {
     background-color: mat-color($dark-palette, 500);
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  .festival-card-annule {
+    color: rgb(214, 87, 87);
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  .festival_name_annule {
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .inner-festival-card-annule {
+    background-color: mat-color($dark-palette, 700);
     color: #fff;
     padding: 20px;
     border-radius: 5px;
