various minor tweaks

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <h1 class="text-center">Liste des Festivals/Festivaux</h1>
+    <h1 class="text-center">Liste des Festivals de Ma Ville</h1>
 
     <div fxLayout="row" fxLayoutAlign="space-evenly center">
         <mat-progress-spinner mode="indeterminate" color="warn" *ngIf="isLoading"></mat-progress-spinner>
