--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <mat-form-field appearance="outline" class="searchBar">
-        <mat-label>Rechercher un utilisateur, un festival...</mat-label>
+        <mat-label>Rechercher un utilisateur, un festival... (script pas migré)</mat-label>
         <input matInput>
     </mat-form-field>
 </div>
