place crud + theme map added

--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -12,6 +12,7 @@
           <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/user">Utilisateurs</button>
           <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/festival">Festivals</button>
           <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/tag">Tags</button>
+          <button class="size-menu-deroulant color-text" mat-menu-item routerLink="admin/place">Places</button>
         </mat-menu>
       </div>
       <h1 fxHide.xs>{{ title }}</h1>
