--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -10,6 +10,7 @@
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['user']">UTILISATEURS</button>
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['festival']">FESTIVALS</button>
         <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['tag']">TAGS</button>
+        <button mat-flat-button color="warn" class="color-text-button-red" [routerLink]="['place']">PLACES</button>
     </div>
 </section>
 
