--- a/src/app/festival/dialogs/update/update-festival.component.html
+++ b/src/app/festival/dialogs/update/update-festival.component.html
@@ -47,8 +47,18 @@
                     <mat-option *ngFor="let tag of tagList" [value]="tag">{{ tag.name }}</mat-option>
                   </mat-select>
               </mat-form-field>
-          </div>
-            
+            </div>
+
+            <div class="form-group">
+              <mat-form-field appearance="outline">
+                  <mat-label *ngIf="data.place">{{ data.place.name }}</mat-label>
+                  <mat-label *ngIf="data.place.length == 0">Place(s)</mat-label>
+                  <mat-select formControlName="place">
+                    <mat-option *ngFor="let place of placeList" [value]="place">{{ place.name }}</mat-option>
+                  </mat-select>
+              </mat-form-field>
+            </div>
+
             <div fxLayout="column" fxLayoutAlign="center center">
                 <div class="form-group">
                   <mat-form-field color="accent" appearance="outline">
