--- a/src/app/festival/festival.component.html
+++ b/src/app/festival/festival.component.html
@@ -53,7 +53,7 @@
                     <ng-container matColumnDef="cancelled">
                         <th mat-header-cell *matHeaderCellDef> ANNULE </th>
                         <td mat-cell *matCellDef="let festival">
-                            <div *ngIf="festival.cancelled; else non" title="{{festival.cancelled}}"> 
+                            <div *ngIf="festival.cancelled; else non" title="{{festival.cancelled}}">
                                 OUI
                             </div>
                             <ng-template #non> NON </ng-template>
@@ -84,11 +84,18 @@
                             </div>
                         </td>
                     </ng-container>
+                    <!-- Place Column -->
+                    <ng-container matColumnDef="place">
+                        <th mat-header-cell *matHeaderCellDef> LIEU </th>
+                        <td mat-cell *matCellDef="let festival">
+                            <div *ngIf="festival.place.name" title="{{festival.place.name}}"> {{festival.place.name}} </div>
+                        </td>
+                    </ng-container>
                     <!-- Options Column -->
                     <ng-container matColumnDef="options">
                         <th mat-header-cell *matHeaderCellDef class="text-end">
                             <td mat-cell *matCellDef="let festivals" class="text-end">
-                            <a (click)="updateDialog(festivals.id, festivals.name, festivals.description, festivals.type, festivals.dateStart, festivals.dateEnd, festivals.cancelled, festivals.color, festivals.tag)">
+                            <a (click)="updateDialog(festivals.id, festivals.name, festivals.description, festivals.type, festivals.dateStart, festivals.dateEnd, festivals.cancelled, festivals.color, festivals.tag, festivals.place)">
                                 <mat-icon> border_color </mat-icon>
                             </a>
                             <a (click)="deleteDialog(festivals.id, festivals.name)">
